Working on ChartUndoManager and CursorTool. Tests almost completed.