@@ -22,6 +22,7 @@
 		<commons-lang3.version>3.8.1</commons-lang3.version>
 		<commons-math3.version>3.6.1</commons-math3.version>
 		<javafx.version>11.0.2</javafx.version>
+		<testfx.version>4.0.15-alpha</testfx.version>
 		<xaos.version>${project.version}</xaos.version>
 	</properties>
 
@@ -60,6 +61,29 @@
 				<version>3.0.1</version>
 				<configuration>
 					<additionalOptions>--add-exports=javafx.controls/com.sun.javafx.charts=xaos.ui.plot</additionalOptions>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<argLine>
+						--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-exports=javafx.controls/com.sun.javafx.charts=xaos.ui.plot
+					</argLine>
+
+					<!-- THE FOLLOWING "excludes" AND "includes" SHOULD BE   -->
+					<!-- USED TO ALLOW EXECUTION OF A SINGLE SPECIFIC TEST.  -->
+					<!-- Otherwise they should be commented out.             -->
+
+					<excludes>
+						<exclude>**/*Suite.java</exclude>
+					</excludes>
+					<includes>
+						<!--<include>**/ChartUndoManagerUITest.java</include>-->
+						<include>**/CursorToolUITest.java</include>
+					</includes>
+
 				</configuration>
 			</plugin>
 		</plugins>
@@ -124,6 +148,20 @@
             <artifactId>xaos.ui</artifactId>
             <version>${xaos.version}</version>
         </dependency>
+
+		<!-- Test - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-core</artifactId>
+			<version>${testfx.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-junit</artifactId>
+			<version>${testfx.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
